objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>AmountField__c</fullName>
        <formula>&quot;$&quot;+TEXT( Amount )</formula>
        <label>AmountField</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <formula>TEXT(MONTH(CloseDate))+ &quot;/&quot; +TEXT(DAY(CloseDate))+ &quot;/&quot; +TEXT(YEAR(CloseDate))</formula>
        <label>CloseDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>TEXT(MONTH(DATEVALUE(CreatedDate)))+ &quot;/&quot; +TEXT(DAY(DATEVALUE(CreatedDate)))+ &quot;/&quot; +TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalPeriod__c</fullName>
        <formula>CASE(MONTH(CloseDate),
1, &quot;1&quot;,
2, &quot;1&quot;,
3, &quot;1&quot;,
4, &quot;2&quot;,
5, &quot;2&quot;,
6, &quot;2&quot;,
7, &quot;3&quot;,
8, &quot;3&quot;,
9, &quot;3&quot;,
10, &quot;4&quot;,
11, &quot;4&quot;,
12, &quot;4&quot;,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FiscalPeriod</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_period__c</fullName>
        <formula>&apos;Q&apos;+FiscalPeriod__c +&apos;-&apos;+ TEXT(YEAR(CloseDate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal-period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubVehicleCapacity__c</fullName>
        <formula>TEXT(SubVehicle__r.Capacity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubVehicleCapacity</label>
        <type>Text</type>
    </fields>
</CustomObject>